@@ -119,6 +119,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   enabled, but user cannot see rc patrol links.
 * (bug 26548) ForeignAPIRepo (InstantCommons) now works with PDF files
   and other multi-paged file formats.
+* Files with a mime type that does not match the extension are now properly
+  thumbnailed 
 
 === API changes in 1.18 ===
 * (bug 26339) Throw warning when truncating an overlarge API result
